<resources>
    <string name="app_name">Turnkey House</string>
    <string name="login_text_hint">Логин</string>
    <string name="password_text_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="sign_up_button">Регистрация</string>
    <string name="reset_password">Забыли пароль?</string>
    <string name="main_activity_title">Авторизация</string>
    <string name="bottom_menu_chat_title">Чат</string>
    <string name="bottom_menu_profile_title">Профиль</string>
    <string name="email_text_hint">Email</string>
    <string name="reset_pass_title">Восстановление пароля</string>
</resources>