<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegisterResetPassword">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_login_dimen"
            android:layout_marginEnd="@dimen/activity_login_dimen"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/email_field"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:text="@string/sign_up_button"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/password_field"
            android:layout_margin="@dimen/activity_login_dimen"
            android:hint="@string/email_text_hint"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/confirm_button"
            android:layout_margin="@dimen/activity_login_dimen"
            android:hint="@string/password_text_hint"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/activity_login_dimen"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:text="@string/sign_up_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_button"
            android:layout_margin="@dimen/activity_login_dimen"
            android:background="@drawable/rounded_button"
            android:text="@string/login_button"/>

    </RelativeLayout>

</layout>